# role-system

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  PHASE1_COMPLETE.md  README.md  SECURITY.md  TELEMETRY_FIXED.md  TELEMETRY_USAGE.md  TEST_COVERAGE_ANALYSIS.md  VERSIONING.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benches/: advanced_benchmarks.rs  benchmark.rs
docs/: SECURITY_INTEGRATION.md
examples/: QUICKSTART.md  basic_usage.rs  batch_test.rs  enhanced_permissions.rs  hierarchy_access_demo.rs  phase1_improvements.rs  telemetry_demo.rs  test_serde_fix.rs  v1_1_features.rs
examples/middleware/: Cargo.toml  README.md  actix_middleware.rs  axum_middleware.rs  rocket_middleware.rs  tests.rs  warp_middleware.rs
examples/web-frameworks/: actix.rs  axum.rs  rocket.rs
proptest-regressions/: fuzz.txt  property_tests.txt
src/: app_type.rs  async_support.rs  auth_context.rs  batch.rs  cache.rs  context_integration.rs  core.rs  database.rs  error.rs  error.rs.backup  error_fixed.rs  error_new.rs  fuzz.rs  health.rs  hierarchy.rs  lib.rs  macros.rs  metrics.rs  performance.rs  permission.rs  property_tests.rs  query.rs  rate_limit.rs  resource.rs  role.rs  storage.rs  subject.rs  telemetry.rs  temporal.rs
tests/: integration_tests.rs  permission_edge_cases.rs  security_tests.rs
