[package]
name = "role-system"
version = "0.1.0"
edition = "2024"
description = "A flexible and powerful role-based access control (RBAC) library for Rust applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciresnave/role-system"
keywords = ["rbac", "authorization", "permissions", "roles", "access-control"]
categories = ["authentication", "web-programming"]
authors = ["Eric Evans <ciresnave@gmail.com>"]

[features]
default = ["async", "audit"]
async = ["tokio", "async-trait"]
persistence = ["serde", "serde_json"]
audit = ["log", "env_logger"]
all = ["async", "persistence", "audit"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = "1.0"
dashmap = "5.5"
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
env_logger = "0.10"
actix-web = "4.4"
axum = "0.7"
rocket = "0.5"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
mockall = "0.11"

[[bench]]
name = "benchmark"
harness = false
