[package]
name = "role-system-middleware-examples"
version = "0.1.0"
edition = "2021"
description = "Comprehensive middleware examples for role-system crate"

[[bin]]
name = "actix_middleware"
path = "actix_middleware.rs"

[[bin]]
name = "axum_middleware"
path = "axum_middleware.rs"

[[bin]]
name = "rocket_middleware"
path = "rocket_middleware.rs"

[[bin]]
name = "warp_middleware"
path = "warp_middleware.rs"

[dependencies]
# Core role system
role-system = { path = "../..", features = ["default", "async"] }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Actix Web dependencies
actix-web = { version = "4.0", optional = true }
futures-util = { version = "0.3", optional = true }

# Axum dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }

# Rocket dependencies
rocket = { version = "0.5", features = ["json"], optional = true }

# Warp dependencies
warp = { version = "0.3", optional = true }
pretty_env_logger = { version = "0.5", optional = true }

[features]
default = []
actix = ["actix-web", "futures-util"]
axum = ["dep:axum", "tower", "tower-http"]
rocket = ["dep:rocket"]
warp = ["dep:warp", "pretty_env_logger"]
all = ["actix", "axum", "rocket", "warp"]

[dev-dependencies]
# Test dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
